--- a/src/Components/FAQ/questionsStyles.css
+++ b/src/Components/FAQ/questionsStyles.css
@@ -1,10 +1,12 @@
 .all-the-questions-container {
     margin: 0.5rem 0rem 2rem 0rem;
+    height: 2.8rem;
 }
 
 .question-styles {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 #question-section {
@@ -16,16 +18,22 @@
     color: #3A3A3A;
 }
 
-.polygon-figure {
+#answer {
+    width: 25rem;
+    margin-top: 3px;
+    margin-left: 1.3rem;
+}
+
+#polygon-figure {
     height: 14px;
     padding-right: 1.5%;
 }
 
-.polygon-figure:hover {
-    -moz-transform: rotate(-30deg);
-    -o-transform: rotate(-30deg);
-    -webkit-transform: rotate(-30deg);
+.rotation {
     transform: rotate(-30deg);
-} 
-
+    -webkit-transform: rotate(-30deg);
+    -o-transform: rotate(-30deg); 
+    -moz-transform: rotate(-30deg);
+    align-items: center;
+}
 
