--- a/src/Components/GalleryContainer/gallery-styles-section.css
+++ b/src/Components/GalleryContainer/gallery-styles-section.css
@@ -5,7 +5,7 @@
 
 .p-container {
     position: absolute;
-    bottom: -401px;
+    bottom: -411px;
     color: white;
     padding: 1rem 1rem 1rem 1rem;
     background: linear-gradient(185.65deg, rgba(236, 116, 128, 0) 8.26%, #EC7480 74.46%);
@@ -29,6 +29,10 @@
 
 #hover-container:hover {
     opacity: 1;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.3s ease-in-out; /** Firefox **/
+    -o-transition: all 0.3s ease-in-out; /** Opera **/
 }
 
 #name {
