--- a/src/Components/Header/header-styles.css
+++ b/src/Components/Header/header-styles.css
@@ -1,4 +1,4 @@
-.main-container {
+#main-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background: linear-gradient(180deg, rgba(236, 116, 128, 0) -49.18%, #EC7480 100%), url('../../Images//pexels-zaksheuskaya-1616403\ 1.png');
