--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -3,17 +3,18 @@
     align-items: center;
     width: 100%;
     text-align: start;
-    height: 5%;
+    height: 6rem;
 }
 
 .option {
     font-family: 'Paytone One', sans-serif;
-    margin: 2rem;
     color: #3A3A3A;
     text-decoration: none;
+    font-size: 13px;
+    margin: 1px 0px 1px 4rem;
 }
 
 .option:hover {
     color: #EC7480;
-    border-bottom: 2px solid #EC7480;
+    border-bottom: 3px solid #EC7480;
 }
