--- a/src/Components/ArtContainer/artContainer.css
+++ b/src/Components/ArtContainer/artContainer.css
@@ -11,6 +11,7 @@
 .paragraph {
     margin-top: 0.3rem;
     font-family: 'Mada', sans-serif;
+    font-weight: 400;
     color: #3A3A3A;
     width: 24rem;
 }
