--- a/src/Components/FAQ/faqStyles.css
+++ b/src/Components/FAQ/faqStyles.css
@@ -7,6 +7,7 @@
 #title-container {
     font-family: 'Paytone One', sans-serif;
     padding: 1.5rem 0rem 1rem 4rem;
+    font-size: 18px;
 }
 
 #artfol-questions {
