--- a/src/Components/ArtContainer/artContainer.css
+++ b/src/Components/ArtContainer/artContainer.css
@@ -4,7 +4,7 @@
 
 .second-title {
     font-family: 'Paytone One', sans-serif;
-    font-size: 19px;
+    font-size: 20px;
     color: #3A3A3A;
 }
 
@@ -12,11 +12,13 @@
     margin-top: 0.3rem;
     font-family: 'Mada', sans-serif;
     font-weight: 400;
+    font-size: 19px;
     color: #3A3A3A;
-    width: 24rem;
+    width: 28rem;
 }
 
 .gallery-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    margin: 0rem 1rem 0rem 1rem;
+    justify-content: center;
 }
