--- a/src/Components/FAQ/faqStyles.css
+++ b/src/Components/FAQ/faqStyles.css
@@ -6,12 +6,14 @@
 
 #title-container {
     font-family: 'Paytone One', sans-serif;
-    padding: 1.5rem 0rem 1rem 4rem;
-    font-size: 18px;
+    padding: 2.5rem 0rem 2rem 4rem;
+    font-size: 20px;
+    color: #3A3A3A;
 }
 
 #artfol-questions {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0rem 0rem 2rem 4rem;
+    height: 17rem;
 }
