--- a/src/Components/ArtContainer/artContainer.css
+++ b/src/Components/ArtContainer/artContainer.css
@@ -1,10 +1,11 @@
 .art-presentation {
     margin: 2.5rem 3.5rem 2rem 3.5rem;
+    padding: 0rem 1rem 0rem 1rem;
 }
 
 .second-title {
     font-family: 'Paytone One', sans-serif;
-    font-size: 25px;
+    font-size: 23px;
     color: #3A3A3A;
 }
 
@@ -12,7 +13,7 @@
     margin-top: 0.3rem;
     font-family: 'Mada', sans-serif;
     font-weight: 400;
-    font-size: 21px;
+    font-size: 20px;
     color: #3A3A3A;
     width: 30rem;
 }
