--- a/src/Components/FAQ/faqStyles.css
+++ b/src/Components/FAQ/faqStyles.css
@@ -2,6 +2,7 @@
     background-color: #F5F5F5;
     margin-top: 2rem;
     position: static;
+    padding: 0.5rem;
 }
 
 #title-container {
@@ -15,5 +16,5 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0rem 0rem 2rem 4rem;
-    height: 17rem;
+    height: 16rem;
 }
