--- a/src/Components/Header/header-styles.css
+++ b/src/Components/Header/header-styles.css
@@ -1,43 +1,28 @@
 #main-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     background: linear-gradient(180deg, rgba(236, 116, 128, 0) -49.18%, #EC7480 100%), url('../../Images//pexels-zaksheuskaya-1616403\ 1.png');
-    height: 26rem;
-    padding: 1rem;
-}
-
-.first-elements-container {
-    justify-content: center;
-    align-items: center;
-    margin: 2.5rem 3.5rem 2rem 3.5rem;
-}
-
-.second-elements-container {
+    height: 30rem;
     display: flex;
-    align-items: center;
-}
-
-.main-logo-style {
-    height: 3rem;
     justify-content: center;
-    margin-bottom: 3%;
+    align-items: center;
 }
 
 .main-title {
     font-family: 'Paytone One', sans-serif;
     color: white;
-    margin-bottom: 4%;
     width: 30rem;
     font-size: 2.5rem;
     font-weight: 400;
 }
 
+.main-logo-style {
+    padding: 1rem 0rem 1rem 0rem;
+}
+
 .appStore-link {
-    height: 3.5rem;
-    margin: 3% 4% 3% 0%;
+    padding: 1rem 1rem 0rem 0rem;
+    margin: 1rem 0rem 0rem 0rem;
 }
 
 .cellphone-photo {
-    height: 38.3rem;
-    position: absolute;
+    height: 42rem;
 }
