--- a/src/Components/FAQ/questionsStyles.css
+++ b/src/Components/FAQ/questionsStyles.css
@@ -1,7 +1,7 @@
 .all-the-questions-container {
-    margin: 0.5rem 15% 2rem 15%;
-    height: 5rem;
     width: 30rem;
+    height: 5rem;
+    margin: 1rem 1rem 1rem 1rem;
 }
 
 .question-styles {
@@ -10,22 +10,17 @@
     cursor: pointer;
 }
 
-#question-section {
-    font-weight: 700;
-}
-
 .question-text {
+    font-size: 21px;
     font-family: 'Mada', sans-serif;
-    color: #3A3A3A;
-    font-size: 19px;
+    font-weight: 400;
 }
 
 #answer {
     width: 28rem;
-    margin-top: 3px;
-    margin-left: 1.3rem;
     font-size: 19px;
     text-align: justify;
+    margin-left: 1.3rem;
 }
 
 #polygon-figure {
